# gathewhy

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  .yamllint.yaml  AGENTS.md  AI-DASHBOARD-PURPOSE.md  CLAUDE.md  CLEANUP-SUMMARY.md  CLOUD_MODELS_READY.md  CODE-IMPROVEMENT-ANALYSIS-WITH-CONTEXT7.md  CODE-IMPROVEMENT-ANALYSIS.md  CODE-REVIEW-FIXES-APPLIED.md  COMMAND-REFERENCE.md  CONFIGURATION-QUICK-REFERENCE.md  CONSOLIDATED_DASHBOARD.md  CONSOLIDATION-COMPLETE-SUMMARY.md  CONSOLIDATION-SUMMARY.md  CRUSH-CONFIG-FIX.json  CRUSH-FIX-APPLIED.md  CRUSH.md  CRUSHVLLM-CLOUD-MODELS-ADDED.md  CURRENT-STATUS.md  DEPLOYMENT.md  DIAGNOSTIC-REPORT.md  DOCUMENTATION-INDEX.md  DOCUMENTATION-SUMMARY.md  FINAL-STATUS.md  FIXES-APPLIED-2025-11-08.md  GEMINI.md  IMPLEMENTATION-COMPLETE.md  IMPLEMENTATION-ROADMAP.md  INDEX.md  LITELLM-OFFICIAL-DOCS-GAP-ANALYSIS.md  MONITORING.md  P0-FIXES-APPLIED.md  PHASE3-INTEGRATION-TEST-REPORT.md  PRIORITIES-IMPLEMENTATION-2025-11-08.md  QUICK-START-PHASE-3.md  QUICKSTART.md  QWEN.md  (+16 more)
.github/: README.md  dependabot.yml
.serena/: project.yml
archive/: QUICK-REFERENCE.md  README.md
backend/: callbacks.py  litellm_integration.py
claudedocs/: CODE-FIXES-2025-10-26.md  python-security-hardening-recommendations.md  research_llm_gateway_comparison_2025-10-24.md
config/: .litellm-version  dashboard-config.yaml  litellm-unified.yaml  llamacpp-models.yaml  model-mappings.yaml  multi-region.yaml  ports.yaml  providers.yaml
docs/: AGENTS.md  API-REFERENCE.md  AUDIT-REPORT-2025-11-09.md  COMMAND-REFERENCE.md  DASHBOARD-CONSOLIDATION.md  DASHBOARD-ENHANCEMENT-ROADMAP.md  DASHBOARD-GUIDE.md  DEEP_ANALYSIS_ROUTING_V1.7.md  DEPLOYMENT.md  DEVELOPMENT-HISTORY.md  DOCUMENTATION-INDEX.md  ENHANCED-DASHBOARD-FEATURES.md  ENHANCEMENTS-V2.md  IMPLEMENTATION_LLAMA_CPP_INTEGRATION.md  NEON_THEME_SUMMARY.md  PHASE-1-COMPLETION.md  PHASE-2-COMPLETION-REPORT.md  PHASE-3-COMPLETION.md  ROUTING_V1.7.1_RELEASE.md  STATUS-CURRENT.md  adding-providers.md  ai-dashboard.md  architecture.md  backend-observability-and-control.md  consuming-api.md  (+24 more)
(+288 files in other folders)
