[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-backend-unified"
version = "1.0.0"
description = "AI Unified Backend Infrastructure - Configuration-driven LLM gateway"
requires-python = ">=3.11"

[tool.ruff]
# Target Python 3.11
target-version = "py311"

# File selection
include = ["scripts/**/*.py", "tests/**/*.py"]
exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    "__pycache__",
    "monitoring/",
]

# Line length
line-length = 100

# Enable auto-fixing for safe rules
fix = true

[tool.ruff.lint]
# Rule selection (start conservative, expand gradually)
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (import sorting)
    "N",   # pep8-naming
    "UP",  # pyupgrade (modern Python syntax)
    "B",   # flake8-bugbear (common bugs)
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "RET", # flake8-return
]

# Rules to ignore (too strict for now)
ignore = [
    "E501",   # Line too long (handled by formatter)
    "B008",   # Function calls in argument defaults
    "RET504", # Unnecessary variable assignment before return
]

[tool.ruff.lint.per-file-ignores]
# Test files can have longer names and fixtures
"tests/**/*.py" = ["N802", "N803"]

[tool.ruff.format]
# Formatting style
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --strict-markers"
markers = [
    "unit: Unit tests (no external dependencies)",
    "integration: Integration tests (requires providers)",
    "contract: Contract tests (API compliance)",
    "slow: Slow-running tests (>5 seconds)",
    "requires_ollama: Requires Ollama provider",
    "requires_vllm: Requires vLLM provider",
    "requires_redis: Requires Redis cache",
    "monitoring: Monitoring stack validation",
]
